# commcare-hq

./: .bash_profile  .bowerrc  .clinerules  .coderabbit.yaml  .coveragerc  .dockerignore  .editorconfig  .eslintrc.js  .flake8  .gitignore  .gitignore~  .gitmodules  .isort.cfg  .lintrc  .mega-linter.yml  .prettierignore  .prettierrc  .pytest.ini  .pytype.cfg  .pyup.yml  .readthedocs.yml  .scss-lint.yml  .stickler.yml  .style.yapf  .transifexrc.example  .travis.yml  12  AGENTS.md  ANTHROPIC_API_SETUP.md  CITUSDB_SETUP.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_STANDARDS.md  COMMON_ISSUES.md  CONTRIBUTING.rst  DEADJOE  DEV_FAQ.md  DEV_SETUP.md  DEV_SETUP_MAC.md  Dockerfile  (+125 more)
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release.yml
.junie/: guidelines.md
.travis/: apps_under_test  commcare-hq-setup.psql  deploy_key.pem.enc  download-requirements-in-parallel.py  get-submodules.sh  install.sh  java-key-gen.sh  kafka_setup.sh  link_to_coverage.py  local.ini  localsettings.py  matrix-before_install.sh  matrix-install.sh  matrix-installs.sh  matrix-runner.sh  matrix-script.sh  misc-setup.sh  pg_setup.sh  quietly-install-requirements.sh  quietly-run-install.sh  s3cfg  setup_icds.sh  simulate.sh  test_runner.sh  testtmp.py  upgrade-couchdb.sh  utils.sh
.tx/: config
a5288/: reports.py
abt_report/: sms_report.json  supervisory_datasource_filter.json  supervisory_datasource_indicators.json
apache/: local_apache.conf
app_builder_live_test/: README.txt  compare_perf_stats.py  diff  fetch_app_source.sh  hitlist.txt
auditcare/: forms.py  inspect.py  middleware.py  models.py  signals.py  tables.py  templateaudit.py  urls.py  utils.py  views.py
bihar/: __init__.py  models.py  tests.py  utils.py
care-sa/: __init__.py  models.py
care_sa/: models.py
case/: const.py  exceptions.py  signals.py  util.py  views.py  xform.py
content/: api.rst  help_xforms.rst
corehq/: README.rst  __init__.py  celery.py  change_ownership.py  const.py  db.py  elastic.py  feature_previews.py  middleware.py  mobile_flags.py  mobile_ucr_v2_update_script.py  pillows.py  privileges.py  reopen_polio_cases.py  reports.py  s3.py  tabs.py  toggles.py  trans_override.py  warnings.py
couchexport/: __init__.py  deid.py  exceptions.py  export.py  files.py  groupexports.py  models.py  properties.py  schema.py  shortcuts.py  tasks.py  tests.py  transforms.py  urls.py  util.py  views.py  writers.py
couchforms/: __init__.py  const.py  exceptions.py  getters.py  jsonobject_extensions.py  models.py  signals.py  urls.py  util.py  views.py  xml.py
custom/: CONTRIBUTING.rst  README.md  __init__.py  expired_domains.md
dca/: __init__.py  models.py  reports.py
deployment/: prometheum_server.py  prometheus_server.py  websocket_wsgi.py
dimagi/: __init__.py  requirements.txt  test_utils.py
django-hq/: .project  .pydevproject  README.txt  build.xml  deploy.py  hq_wsgi.py  hqsetup.ini  hqstart  hqstart.py  init.sh  rapidsms.ini  rs_wsgi.py  simpleserver.py
docker/: .dockerignore  Dockerfile  Dockerfile-py3  Dockerfile_commcarehq  Dockerfile_commcarehq_base  Dockerfile_commcarehq_test  Dockerfile_es  Dockerfile_web  README.md  README.rst  _include.sh  bootstrap.sh  bootstrap_internal.sh  citus-compose.yml  create-kafka-topics.sh  docker-build.sh  docker-compose-base.yml  docker-compose-hq.yml  docker-compose-services.yml  docker-compose-test.yml  docker-compose-web.yml  docker-rm.sh  docker-run.sh  docker-services.sh  docker-start.sh  docker-stop.sh  dockersettings.py  entrypoint.sh  hq-compose-arch-arm64.yml  hq-compose-arm64.yml  hq-compose-bootstrap.yml  hq-compose-citus.yml  hq-compose-os-default.yml  hq-compose-os-macos-m1-11.yml  hq-compose-os-macos-m1-12.yml  hq-compose-runserver.yml  hq-compose-services.yml  hq-compose-travis.yml  hq-compose.yml  init-hq.sh  (+16 more)
docs/: Makefile  README  advanced_app_features.rst  api.rst  caching_and_memoization.rst  case_search_query_language.rst  cchq_graph.dot  celery.rst  cep.rst  change_feeds.rst  chw.rst  class_views.rst  cloudcare.rst  common_commcare_mobile_dev_workspace_build_errors.rst  commtrack.rst  conf.py  couch_design_doc_changes.rst  couch_to_sql_models.rst  couchdb.rst  custom.rst  databases.rst  deploy.rst  dhis2_integration.rst  diving_in.rst  documenting.rst  dots.rst  elasticsearch.rst  email_monitoring_SES.rst  es_fake.rst  es_query.rst  export_api.rst  exports.rst  extensions.rst  fhir.rst  fluff.rst  formplayer.rst  forms.rst  forms_and_cases.rst  getting_started.rst  icds_dashboard.rst  (+38 more)
eslint/: .eslintignore  README.md  package.json
fab/: chief.py  config.example.py  decorators.py  deploy_template.txt  environments.yml  fabfile.py  pillow_settings.py
fluff/: __init__.py  calculators.py  emitters.py  exceptions.py  filters.py  models.py  pillow.py  signals.py  sync_couchdb.py  tests.py  util.py
frontend/: buttonTable.js  localTable.js  modalPopup.js  reactExamples.js  reactToHTML.js  readFromKnockout.js  remoteTable.js
git-hooks/: install.sh  post-checkout.sh  post-merge.sh  pre-commit.sh
hqscripts/: README.txt  generic_queue.py
hqstyle/: README.md
hqui/: models.py  urls.py  views.py
hsph/: __init__.py  const.py  fields.py  reports.py  tasks.py
js-guide/: migrating.md
lib/: README
lib_tests/: test_gzipfile.py
loadtest/: README.mkd  config.cfg  config.cfg.example  daily_test.sh
locale/: hi
migrations/: 0001_initial.py
mkdocs_django_assets/: pyproject.toml
models/: couch.py
mvp/: __init__.py  models.py  reports.py  tasks.py  urls.py  utils.py  views.py
mvp_apps/: __init__.py
pact/: __init__.py  api.py  dot_data.py  dot_handler.py  enums.py  models.py  pillowhandler.py  pillows.py  regimen.py  signals.py  tasks.py  utils.py  views.py
pathfinder/: __init__.py  models.py  patient_group.py  urls.py  views.py
pathindia/: __init__.py  reports.py
phonelog/: models.py  old_reports.py  reports.py  urls.py  views.py
pillow_retry/: models.py  tasks.py  tests.py
pillowtop/: __init__.py  const.py  couchdb.py  es_utils.py  example.conf  exceptions.py  listener.py  listeners.py  (+7 more)
(+29506 files in other folders)
