[project]
name = "commcare-hq"
readme = "README.md"
license = { file = "LICENSE" }
version = "1.0.0"

# The version of Python that will be installed when creating a new venv is
# stored in .python-version, and may need to be updated if requires-python is
# changed here. Use `uv python pin VERSION`
requires-python = ">=3.9"

[project.urls]
Homepage = "https://commcarehq.org"
Documentation = "https://commcare-hq.readthedocs.io"
Repository = "https://github.com/dimagi/commcare-hq"
