[project]
name = "commcare-hq"
readme = "README.md"
license = { file = "LICENSE" }
version = "1.0.0"

# The version of Python that will be installed when creating a new venv is
# stored in .python-version, and may need to be updated if requires-python is
# changed here. Use `uv python pin VERSION`
#
# NOTE: the upper bound pin is not recommended (see links below), but was added
# to address:
#
#  × No solution found when resolving dependencies for split (python_full_version >= '4'):
#  ╰─▶ Because ddtrace==3.0.0 depends on bytecode{python_full_version >= '3.13'}>=0.16.0 and
#       bytecode{python_full_version >= '3.13'}==0.14.2, we can conclude that ddtrace==3.0.0 cannot be used.
#       And because your project depends on ddtrace==3.0.0, we can conclude that your project's requirements are
#       unsatisfiable.
#
# This will be addressed by upgrading 'bytecode' in a later commit.
#
# https://github.com/astral-sh/uv/issues/7429#issuecomment-2353092246
# https://iscinumpy.dev/post/bound-version-constraints/#pinning-the-python-version-is-special
requires-python = ">=3.9,<3.12"

dependencies = [
    "alembic",
    "architect",
    "attrs>=21.4",
    "beautifulsoup4", # USH - used for rich text messaging emails, and some tests
    "bleach", # USH - used for rich text messaging emails
    "bleach[css]", # USH - used for rich text messaging emails
    "boto3",
    "celery",
    "CommcareTranslationChecker>=0.9.7",
    "cryptography>=43.0.1",
    "csiphash",
    "datadog",
    "ddtrace>=2.21.0",
    "decorator==5.1.1", # required by django-digest
    "defusedxml",
    "diff-match-patch",
    "dimagi-memoized",
    "django-autoslug",
    "django-braces",
    "django-bulk-update",
    "django-celery-results",
    "django-compressor",
    "django-countries",
    "django-crispy-forms",
    "crispy-bootstrap3to5 @ git+https://github.com/dimagi/crispy-bootstrap3to5.git@775b93b8cd8e5312cab4a367409a95b66ce18165",
    "django-cte",
    "django-field-audit",
    "django-formtools",
    "django-oauth-toolkit",
    "django-otp",
    "django-phonenumber-field",
    "django-prbac",
    "django-redis-sessions",
    "django-redis",
    "django-recaptcha",
    "django-statici18n",
    "django-tables2",
    "django-tastypie",
    "django-transfer",
    "django-two-factor-auth @ git+https://github.com/jazzband/django-two-factor-auth.git@16f688bf329526d897a33594ab598bcd3fc8eaae",  # waiting for next release after 1.16.0
    "django-user-agents",
    "django-websocket-redis @ https://raw.githubusercontent.com/dimagi/django-websocket-redis/0.6.0.1/releases/django_websocket_redis-0.6.0.1-py3-none-any.whl",
    "django>=4.2.16,<5.0",
    "djangorestframework",
    "dropbox",
    "elasticsearch5>=5.0.0,<6.0.0",
    "elasticsearch6>=6.0.0,<7.0.0",
    "ethiopian-date-converter",
    "eulxml",
    "geoip2", # USH - used for IPAccessMiddleware
    "gevent>=24.11.1",
    "greenlet",
    "gunicorn",
    "haversine", # SolTech - Used in Geospatial features
    "hiredis",
    "httpagentparser",
    "iso8601",
    "Jinja2",
    "jsonfield",
    "jsonobject-couchdbkit",
    "jsonobject>=2.3.1",
    # jsonpath-ng with support for "wherenot" operator, and building documents
    # Upgrade when changes merged upstream
    "jsonpath-ng @ https://github.com/kaapstorm/python-jsonpath-rw/raw/wherenot+find_or_create/wheel/jsonpath_ng-1.5.2.2-py3-none-any.whl",
    "jsonschema",
    "kafka-python",
    "looseversion",
    "lxml",
    "markdown",
    "oic",
    "pulp", # Used in Geospatial features to solve routing problems - SolTech
    "openpyxl",
    "packaging",
    "phonenumberslite",
    "Pillow",
    "polib",
    "prometheus-client",
    "psycogreen",
    "psycopg2>=2.9.10",
    "py-KISSmetrics",
    "pycryptodome>=3.6.6", # security update
    "python-dateutil",
    "python-imap",
    "pyphonetics",
    "python-magic",
    "pytz",
    "pyjwt",
    "PyYAML>=6.0.2",
    "hl7apy",
    "pyzxcvbn",
    "qrcode",
    "quickcache",
    "redis",
    "reportlab==4.3.0",
    "requests_oauthlib",
    "requests_toolbelt",
    "requests",
    "schema",
    "sentry-sdk",
    "sh",
    "simpleeval",
    "simplejson",
    "six",
    "socketpool",
    "sqlagg",
    "SQLAlchemy",
    "stripe",
    "suds-py3",
    "text-unidecode",
    "toposort",
    "transifex-python",
    "tropo-webapi-python",
    "turn-python",
    "twilio",
    "werkzeug",
    "xlrd",
    "xlwt",
]

[project.urls]
Homepage = "https://commcarehq.org"
Documentation = "https://commcare-hq.readthedocs.io"
Repository = "https://github.com/dimagi/commcare-hq"
